--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "mysitesuper": {
@@ -123,6 +123,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "mysitesuper"
+    }
+  },
+  "defaultProject": "mysitesuper",
+  "cli": {
+    "analytics": "a3eeed84-85c5-4353-a8f6-a72a0aed6a82"
+  }
 }
